style.css
.hero {
    background-image: url("images/paint-splatter.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

    height: 500px;

    display: flex;
    justify-content: center;
    align-items: center;

    text-align: center;

    position: relative;
}

.home-logo {
    position: absolute;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
}


.home-logo img {
    width: 120px;
    height: 120px;
    object-fit: contain;
    transition: transform 0.3s ease;
    background: white;
    border-radius: 50%;
    padding: 1px;
    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
}


.home-logo:hover img {
    transform: scale(1.1);
}


.hero-content {
    color: rgb(255, 255, 255);
    text-shadow: 2px 2px 2px black,
        -2px -2px 2px black,
        2px -2px 2px black,
        -2px 2px 2px black;
}


.hero-content h1 {
    font-size: 4rem;
    margin-bottom: 10px;
}

.hero-content p {
    font-size: 1.4rem;
}








.categories {
    text-align: center;
    padding: 50px 20px;
}


.card-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 30px;
    max-width: 1200px;
    margin: auto;
}


.category-card {
    text-decoration: none;
    color: black;
    background: white;
    border-radius: 20px;
    overflow: hidden;
    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
    transition: transform 0.3s ease;
}


.category-card:hover {
    transform: translateY(-10px);
}


.category-card img {
    width: 100%;
    height: 250px;
    object-fit: cover;
}


.category-card h3 {
    font-size: 1.8rem;
    margin: 15px 0 5px;
}


.category-card p {
    padding: 0 20px 20px;
}





/* Events */

.events {

    padding:40px 10px;
    text-align:center;

    background:#f8f4f0;

}

.events h2 {

    font-size:3rem;
    margin-bottom:40px;

}

.event-container {

    display:flex;
    justify-content:center;
    gap:30px;
    flex-wrap:wrap;

}

.event-card {

    background:white;

    max-width:350px;

    padding:30px;

    border-radius:20px;

    box-shadow:
    0 5px 15px rgba(0,0,0,0.15);

    transition:transform 0.3s ease;

}

.event-card:hover {

    transform:translateY(-5px);

}

.event-card h3 {

    font-size:1.8rem;
    margin-bottom:20px;

}

.event-card p {

    line-height:1.6;

}






/* mobile */

@media (max-width: 768px) {

    .hero {
        height: 400px;
    }

    .home-logo {
        bottom: 15px;
    }

    .home-logo img {
        width: 75px;
        height: 75px;
    }
    .card-container {
        grid-template-columns: 1fr;
    }

    .category-card img {
        height: 220px;
    }

    .hero-content {
        padding-bottom: 80px;
    }

    .hero-content h1 {
        font-size: 2.5rem;
    }

    .hero-content p {
        font-size: 1.5rem;
    }

    .before-after {
        margin: 30px 10px;
        padding: 10px;
    }

    .before-image {
        width: 100vw;
        max-width: none;
    }

    .about-intro {
        flex-direction: column;
        text-align:center;
    }


    .about-image img {
        width:250px;
        height:250px;
    }

    .about-values {
        flex-direction: column;
        text-align: center;
    }

    .gallery-grid,
    .gallery-box{
    columns: 3;
    }

    .book-description p {

        font-size:1rem;
        line-height:1.6;

    }

    /* Book preview */

    .book-preview .gallery-item {
        display:flex;
        justify-content:center;
    }


    .book-preview .gallery-item img {

        width:350px;
        max-width:90%;

        border-radius:20px;

        box-shadow:
        0 10px 25px rgba(0,0,0,0.25);

        cursor:pointer;

    }


    /* Hide arrows because only one image */

    .book-preview + .lightbox .prev,
    .book-preview + .lightbox .next {

        display:none;

    }

}





/* about page */

.about {
    padding: 60px 20px;
}


.about-intro {
    display: flex;
    align-items: center;
    gap: 50px;
    max-width: 1200px;
    margin: auto;
}


.about-image img {
    width: 350px;
    height: 350px;
    object-fit: cover;
    border-radius: 50%;
    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
}


.about-text {
    flex: 1;
}


.about-text h2 {
    font-size: 2.5rem;
}

.about-values {
    display: flex;
    align-items: center;
    gap: 120px;
    max-width: 1200px;
    margin: auto;
}







/* gallery */

.gallery {
    padding: 60px 20px;
    max-width:1200px;
    margin:auto;
}


.gallery h2,
.title h2 {
    text-align:center;
    font-size:3rem;
    margin-bottom:40px;
}

/* pet grid */
.gallery-grid {

    columns: 3;
    column-gap: 25px;

}
/* vehicle grid */
.gallery-box {
    columns: 2;
    column-gap: 25px;
}


.gallery-item {
    overflow:hidden;
    border-radius:20px;
    box-shadow:0 5px 15px rgba(0,0,0,0.2);
    break-inside: avoid;
    margin-bottom:25px;

}


.gallery-item img {

    width:100%;
    height:auto;
    display:block;
    transition:transform .3s;
    

}


.gallery-item:hover img {

    transform:scale(1.05);

}






/* light box */

.lightbox {

    display:none;
    position:fixed;
    z-index:1000;
    top:0;
    left:0;
    width:100%;
    height:100%;

    background:rgba(0,0,0,0.85);

    justify-content:center;
    align-items:center;

}

.lightbox-content {

    display:flex;
    flex-direction:column;
    align-items:center;

    width:fit-content;
    max-width:90vw;

}

.lightbox-title {
    color: white;
    margin-top: 20px;
    margin-bottom: 10px;
    text-align: center;
}

.lightbox-description {

    color:white;
    text-align:center;

    max-width:500px;

    line-height:1.6;

}


.lightbox-image {

    display:block;

    max-width:90vw;
    max-height:75vh;

    width:auto;
    height:auto;

    object-fit:contain;

}


.close {

    position:absolute;
    top:20px;
    right:35px;

    color:white;
    font-size:50px;
    cursor:pointer;

}


.prev,
.next {

    position:absolute;

    top:50%;
    transform:translateY(-50%);

    background:none;
    border:none;

    color:white;
    font-size:50px;

    cursor:pointer;

}


.prev {
    left:30px;
}


.next {
    right:30px;
}


.prev:hover,
.next:hover,
.close:hover {

    opacity:0.7;

}









/* before and after mural pics */

.before-after {
    width: 100%;
    max-width: 1200px;
    margin: 50px auto;
    background: white;
    padding: 15px;
    border-radius: 20px;
    box-shadow: 0 5px 15px rgba(0,0,0,0.15);
}


.image-wrapper {
    position: relative;
    width: 100%;
    aspect-ratio: 1947 / 863;
    overflow: hidden;
}


.after-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}


/* This is the moving reveal window */
.before-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 50%;
    height: 100%;
    overflow: hidden;
}


/* This keeps the before image the same size as the after image */
.before-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    max-width: 1200px;
    height: 100%;
    object-fit: cover;
}


.slider {
    width: 100%;
    margin-top: 15px;
    cursor: pointer;
}

.mural-info {
    text-align:center;
    margin-bottom:20px;
}


.mural-info h2 {
    font-size:2rem;
    margin-bottom:10px;
}


.mural-info p {
    max-width:700px;
    margin:auto;
}


.mural-details {
    text-align:center;
    margin-top:20px;
}







/* book page */
.book-description {

    max-width:900px;
    margin:50px auto;
    padding:0 20px;

    text-align:center;

}

.book-description p {

    font-size:1.2rem;
    line-height:1.8;
    margin-bottom:15px;

    color:#444;

}

.coming-soon {

    max-width:900px;
    margin:60px auto;
    padding:20px 20px;

    text-align:center;

    background:white;
    border-radius:20px;

    box-shadow:0 5px 15px rgba(0,0,0,0.15);

}

.coming-soon h2 {

    font-size:2.5rem;
    margin-bottom:20px;

}

.contact-box {

    margin-top:40px;

}

.contact-buttons {

    display:flex;
    justify-content:center;
    gap:10px;
    margin-top:20px;

}


/* book cover */

.book-preview {

    text-align:center;
    padding:10px 20px;

}


.book-preview img {

    width:350px;
    max-width:90%;

    border-radius:20px;

    box-shadow:
    0 10px 25px rgba(0,0,0,0.25);

}



/* footer */

footer {
    background: #5f5f5f;
    color: white;
    text-align: center;
    padding: 10px 10px;
}

footer h2 {
    font-size: 2rem;
    margin-bottom: 10px;
}

footer p {
    margin-bottom: 5px;
}

.footer-nav,
.footer-social, 
footer h2 {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 25px;
    margin-bottom: 25px;
    align-items: center;
}


footer a {
    color: white;
    text-decoration: none;
    transition: color 0.3s;
}

footer a:hover {
    color: #f7b733;
}

.copyright {
    margin-top: 30px;
    padding-top: 20px;
    border-top: 1px solid rgba(255,255,255,0.2);
    font-size: 0.9rem;
}

.social-button {
    background: none;
    border: none;
    padding: 0;
    margin: 5px;
    box-shadow: none;
}

.social-button img {
    width: 80px;
    height: 80px;
    object-fit: contain;
    transition: transform 0.3s ease;
}

.social-button:hover img {
    transform: scale(1.15);
}
    

